# test_workflow

./: Cargo.toml
.github/workflows/: build.yml
astro/: package.json  pnpm-lock.yaml
astro/src/components/: Footer.astro  Header.astro  IconPaths.ts  Navbar.astro  Sidebar.astro  ThemeTogle.astro
astro/src/layout/: Dashboard.astro  Login.astro
astro/src/pages/: index.astro
astro/src/style/: main.css
astro/src/svelte/: type.ts
astro/src/svelte/components/: AreaCharts.svelte  Compass.svelte  GraphSelect.svelte  Notification.svelte  Radial.svelte  Status.svelte  Tank.svelte  Title.svelte
astro/src/svelte/lib/: Card.svelte  Card2.svelte  Card3.svelte  Card4.svelte  Page.svelte  Section.svelte  dateCounter.ts  globalState.ts
astro/src/svelte/page/: Dashboard.svelte
query/: dummy_data.sql  init.sql
src/: cookies.rs  cors.rs  main.rs  setting.rs
src/database/: log.rs  mod.rs  sensors.rs  status.rs  users.rs
src/router/: mod.rs
src/router/api/: input.rs  mod.rs  monitor.rs  user.rs
