[package]
name = "ship-monitor-astro-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
chrono = { version ="0.4.24", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
async-mutex = "1.4.0"
bcrypt = "0.13"
csv = "1.2.1"

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["postgres","chrono","macros"]

[dependencies.uuid]
version = "1.3.2"
features = ["v4", "fast-rng", "macro-diagnostics"]

[build]
target = "x86_64-pc-windows-gnu"